test_outputs/connlist/acs-security-demos_udp-5353_deny_explain_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => backend/catalog[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => backend/checkout[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/checkout-netpol selects backend/checkout[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/checkout[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => backend/notification[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => backend/recommendation[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/recommendation[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/recommendation-netpol selects backend/recommendation[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => backend/reports[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/reports[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/reports-netpol selects backend/reports[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => backend/shipping[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => frontend/asset-cache[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => frontend/webapp[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/webapp[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy frontend/webapp-netpol selects frontend/webapp[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => payments/gateway[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/gateway[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/gateway-netpol selects payments/gateway[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => payments/mastercard-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => payments/visa-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/catalog[Deployment] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)

		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/catalog[Deployment] => backend/checkout[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], but backend/checkout[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but backend/checkout[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/checkout-netpol selects backend/checkout[Deployment], but backend/catalog[Deployment] is not selected by any Ingress rule
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/checkout[Deployment], but backend/catalog[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/catalog[Deployment] => backend/notification[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], but backend/notification[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but backend/notification[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but backend/catalog[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but backend/catalog[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/catalog[Deployment] => backend/recommendation[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], but backend/recommendation[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but backend/recommendation[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/recommendation[Deployment], but backend/catalog[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/recommendation-netpol selects backend/recommendation[Deployment], but backend/catalog[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/catalog[Deployment] => backend/reports[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], but backend/reports[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but backend/reports[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/reports[Deployment], but backend/catalog[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/reports-netpol selects backend/reports[Deployment], but backend/catalog[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/catalog[Deployment] => backend/shipping[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], but backend/shipping[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but backend/shipping[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but backend/catalog[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but backend/catalog[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/catalog[Deployment] => frontend/asset-cache[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], but frontend/asset-cache[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but frontend/asset-cache[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], and Ingress rule #1 selects backend/catalog[Deployment], but the protocols and ports do not match
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but backend/catalog[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/catalog[Deployment] => frontend/webapp[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], but frontend/webapp[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but frontend/webapp[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/webapp[Deployment], but backend/catalog[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy frontend/webapp-netpol selects frontend/webapp[Deployment], and Ingress rule #1 selects backend/catalog[Deployment], but the protocols and ports do not match


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/catalog[Deployment] => payments/gateway[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], but payments/gateway[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but payments/gateway[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/gateway[Deployment], but backend/catalog[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/gateway-netpol selects payments/gateway[Deployment], but backend/catalog[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/catalog[Deployment] => payments/mastercard-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but backend/catalog[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but backend/catalog[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/catalog[Deployment] => payments/visa-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], but payments/visa-processor[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but payments/visa-processor[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but backend/catalog[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but backend/catalog[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/checkout[Deployment] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/checkout-netpol selects backend/checkout[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/checkout[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)

		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/checkout[Deployment] => backend/catalog[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/checkout-netpol allows connection by Egress rule #4
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], but backend/checkout[Deployment] is not selected by any Ingress rule
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but backend/checkout[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/checkout[Deployment] => backend/notification[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/checkout-netpol allows connection by Egress rule #4
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but backend/checkout[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], and Ingress rule #1 selects backend/checkout[Deployment], but the protocols and ports do not match


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/checkout[Deployment] => backend/recommendation[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/checkout-netpol allows connection by Egress rule #4
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/recommendation[Deployment], but backend/checkout[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/recommendation-netpol selects backend/recommendation[Deployment], and Ingress rule #1 selects backend/checkout[Deployment], but the protocols and ports do not match


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/checkout[Deployment] => backend/reports[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/checkout-netpol allows connection by Egress rule #4
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/reports[Deployment], but backend/checkout[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/reports-netpol selects backend/reports[Deployment], but backend/checkout[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/checkout[Deployment] => backend/shipping[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/checkout-netpol allows connection by Egress rule #4
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but backend/checkout[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but backend/checkout[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/checkout[Deployment] => frontend/asset-cache[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/checkout-netpol allows connection by Egress rule #4
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], and Ingress rule #1 selects backend/checkout[Deployment], but the protocols and ports do not match
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but backend/checkout[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/checkout[Deployment] => frontend/webapp[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/checkout-netpol allows connection by Egress rule #4
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/webapp[Deployment], but backend/checkout[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy frontend/webapp-netpol selects frontend/webapp[Deployment], and Ingress rule #1 selects backend/checkout[Deployment], but the protocols and ports do not match


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/checkout[Deployment] => payments/gateway[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/checkout-netpol allows connection by Egress rule #4
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/gateway[Deployment], but backend/checkout[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/gateway-netpol selects payments/gateway[Deployment], and Ingress rule #1 selects backend/checkout[Deployment], but the protocols and ports do not match


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/checkout[Deployment] => payments/mastercard-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/checkout-netpol allows connection by Egress rule #4
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but backend/checkout[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but backend/checkout[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/checkout[Deployment] => payments/visa-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/checkout-netpol allows connection by Egress rule #4
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but backend/checkout[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but backend/checkout[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/notification[Deployment] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)

		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/notification[Deployment] => backend/catalog[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but backend/catalog[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but backend/catalog[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], but backend/notification[Deployment] is not selected by any Ingress rule
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but backend/notification[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/notification[Deployment] => backend/checkout[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but backend/checkout[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but backend/checkout[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/checkout-netpol selects backend/checkout[Deployment], but backend/notification[Deployment] is not selected by any Ingress rule
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/checkout[Deployment], but backend/notification[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/notification[Deployment] => backend/recommendation[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but backend/recommendation[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but backend/recommendation[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/recommendation[Deployment], but backend/notification[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/recommendation-netpol selects backend/recommendation[Deployment], but backend/notification[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/notification[Deployment] => backend/reports[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but backend/reports[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but backend/reports[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/reports[Deployment], but backend/notification[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/reports-netpol selects backend/reports[Deployment], but backend/notification[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/notification[Deployment] => backend/shipping[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but backend/shipping[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but backend/shipping[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but backend/notification[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but backend/notification[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/notification[Deployment] => frontend/asset-cache[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but frontend/asset-cache[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but frontend/asset-cache[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], and Ingress rule #1 selects backend/notification[Deployment], but the protocols and ports do not match
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but backend/notification[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/notification[Deployment] => frontend/webapp[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but frontend/webapp[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but frontend/webapp[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/webapp[Deployment], but backend/notification[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy frontend/webapp-netpol selects frontend/webapp[Deployment], and Ingress rule #1 selects backend/notification[Deployment], but the protocols and ports do not match


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/notification[Deployment] => payments/gateway[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but payments/gateway[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but payments/gateway[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/gateway[Deployment], but backend/notification[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/gateway-netpol selects payments/gateway[Deployment], but backend/notification[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/notification[Deployment] => payments/mastercard-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but backend/notification[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but backend/notification[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/notification[Deployment] => payments/visa-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but payments/visa-processor[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but payments/visa-processor[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but backend/notification[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but backend/notification[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/recommendation[Deployment] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/recommendation[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/recommendation-netpol selects backend/recommendation[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule

		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/recommendation[Deployment] => backend/catalog[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/recommendation-netpol allows connection by Egress rule #2
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], and Ingress rule #1 selects backend/recommendation[Deployment], but the protocols and ports do not match
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but backend/recommendation[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/recommendation[Deployment] => backend/checkout[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/recommendation-netpol allows connection by Egress rule #2
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/checkout-netpol selects backend/checkout[Deployment], but backend/recommendation[Deployment] is not selected by any Ingress rule
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/checkout[Deployment], but backend/recommendation[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/recommendation[Deployment] => backend/notification[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/recommendation-netpol allows connection by Egress rule #2
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but backend/recommendation[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but backend/recommendation[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/recommendation[Deployment] => backend/reports[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/recommendation-netpol allows connection by Egress rule #2
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/reports[Deployment], but backend/recommendation[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/reports-netpol selects backend/reports[Deployment], but backend/recommendation[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/recommendation[Deployment] => backend/shipping[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/recommendation-netpol allows connection by Egress rule #2
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but backend/recommendation[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but backend/recommendation[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/recommendation[Deployment] => frontend/asset-cache[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/recommendation-netpol allows connection by Egress rule #2
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], and Ingress rule #1 selects backend/recommendation[Deployment], but the protocols and ports do not match
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but backend/recommendation[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/recommendation[Deployment] => frontend/webapp[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/recommendation-netpol allows connection by Egress rule #2
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/webapp[Deployment], but backend/recommendation[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy frontend/webapp-netpol selects frontend/webapp[Deployment], and Ingress rule #1 selects backend/recommendation[Deployment], but the protocols and ports do not match


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/recommendation[Deployment] => payments/gateway[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/recommendation-netpol allows connection by Egress rule #2
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/gateway[Deployment], but backend/recommendation[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/gateway-netpol selects payments/gateway[Deployment], but backend/recommendation[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/recommendation[Deployment] => payments/mastercard-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/recommendation-netpol allows connection by Egress rule #2
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but backend/recommendation[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but backend/recommendation[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/recommendation[Deployment] => payments/visa-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/recommendation-netpol allows connection by Egress rule #2
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but backend/recommendation[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but backend/recommendation[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/reports[Deployment] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/reports[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/reports-netpol selects backend/reports[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule

		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/reports[Deployment] => backend/catalog[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/reports-netpol allows connection by Egress rule #3
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], and Ingress rule #2 selects backend/reports[Deployment], but the protocols and ports do not match
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but backend/reports[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/reports[Deployment] => backend/checkout[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/reports-netpol allows connection by Egress rule #3
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/checkout-netpol selects backend/checkout[Deployment], but backend/reports[Deployment] is not selected by any Ingress rule
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/checkout[Deployment], but backend/reports[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/reports[Deployment] => backend/notification[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/reports-netpol allows connection by Egress rule #3
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but backend/reports[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but backend/reports[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/reports[Deployment] => backend/recommendation[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/reports-netpol allows connection by Egress rule #3
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/recommendation[Deployment], but backend/reports[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/recommendation-netpol selects backend/recommendation[Deployment], and Ingress rule #2 selects backend/reports[Deployment], but the protocols and ports do not match


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/reports[Deployment] => backend/shipping[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/reports-netpol allows connection by Egress rule #3
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but backend/reports[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but backend/reports[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/reports[Deployment] => frontend/asset-cache[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/reports-netpol allows connection by Egress rule #3
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], and Ingress rule #1 selects backend/reports[Deployment], but the protocols and ports do not match
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but backend/reports[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/reports[Deployment] => frontend/webapp[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/reports-netpol allows connection by Egress rule #3
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/webapp[Deployment], but backend/reports[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy frontend/webapp-netpol selects frontend/webapp[Deployment], and Ingress rule #1 selects backend/reports[Deployment], but the protocols and ports do not match


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/reports[Deployment] => payments/gateway[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/reports-netpol allows connection by Egress rule #3
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/gateway[Deployment], but backend/reports[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/gateway-netpol selects payments/gateway[Deployment], but backend/reports[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/reports[Deployment] => payments/mastercard-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/reports-netpol allows connection by Egress rule #3
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but backend/reports[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but backend/reports[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/reports[Deployment] => payments/visa-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy backend/reports-netpol allows connection by Egress rule #3
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but backend/reports[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but backend/reports[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/shipping[Deployment] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)

		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/shipping[Deployment] => backend/catalog[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but backend/catalog[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but backend/catalog[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], but backend/shipping[Deployment] is not selected by any Ingress rule
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but backend/shipping[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/shipping[Deployment] => backend/checkout[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but backend/checkout[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but backend/checkout[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/checkout-netpol selects backend/checkout[Deployment], but backend/shipping[Deployment] is not selected by any Ingress rule
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/checkout[Deployment], but backend/shipping[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/shipping[Deployment] => backend/notification[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but backend/notification[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but backend/notification[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but backend/shipping[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but backend/shipping[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/shipping[Deployment] => backend/recommendation[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but backend/recommendation[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but backend/recommendation[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/recommendation[Deployment], but backend/shipping[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/recommendation-netpol selects backend/recommendation[Deployment], but backend/shipping[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/shipping[Deployment] => backend/reports[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but backend/reports[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but backend/reports[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/reports[Deployment], but backend/shipping[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/reports-netpol selects backend/reports[Deployment], but backend/shipping[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/shipping[Deployment] => frontend/asset-cache[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but frontend/asset-cache[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but frontend/asset-cache[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], and Ingress rule #1 selects backend/shipping[Deployment], but the protocols and ports do not match
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but backend/shipping[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/shipping[Deployment] => frontend/webapp[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but frontend/webapp[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but frontend/webapp[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/webapp[Deployment], but backend/shipping[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy frontend/webapp-netpol selects frontend/webapp[Deployment], and Ingress rule #1 selects backend/shipping[Deployment], but the protocols and ports do not match


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/shipping[Deployment] => payments/gateway[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but payments/gateway[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but payments/gateway[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/gateway[Deployment], but backend/shipping[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/gateway-netpol selects payments/gateway[Deployment], but backend/shipping[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/shipping[Deployment] => payments/mastercard-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but backend/shipping[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but backend/shipping[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between backend/shipping[Deployment] => payments/visa-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but payments/visa-processor[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but payments/visa-processor[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but backend/shipping[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but backend/shipping[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/asset-cache[Deployment] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)

		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/asset-cache[Deployment] => backend/catalog[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], but backend/catalog[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but backend/catalog[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], but frontend/asset-cache[Deployment] is not selected by any Ingress rule
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but frontend/asset-cache[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/asset-cache[Deployment] => backend/checkout[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], but backend/checkout[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but backend/checkout[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/checkout-netpol selects backend/checkout[Deployment], but frontend/asset-cache[Deployment] is not selected by any Ingress rule
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/checkout[Deployment], but frontend/asset-cache[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/asset-cache[Deployment] => backend/notification[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], but backend/notification[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but backend/notification[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but frontend/asset-cache[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but frontend/asset-cache[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/asset-cache[Deployment] => backend/recommendation[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], but backend/recommendation[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but backend/recommendation[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/recommendation[Deployment], but frontend/asset-cache[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/recommendation-netpol selects backend/recommendation[Deployment], but frontend/asset-cache[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/asset-cache[Deployment] => backend/reports[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], but backend/reports[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but backend/reports[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/reports[Deployment], but frontend/asset-cache[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/reports-netpol selects backend/reports[Deployment], but frontend/asset-cache[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/asset-cache[Deployment] => backend/shipping[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], but backend/shipping[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but backend/shipping[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but frontend/asset-cache[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but frontend/asset-cache[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/asset-cache[Deployment] => frontend/webapp[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], but frontend/webapp[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but frontend/webapp[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/webapp[Deployment], but frontend/asset-cache[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy frontend/webapp-netpol selects frontend/webapp[Deployment], and Ingress rule #1 selects frontend/asset-cache[Deployment], but the protocols and ports do not match


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/asset-cache[Deployment] => payments/gateway[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], but payments/gateway[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but payments/gateway[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/gateway[Deployment], but frontend/asset-cache[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/gateway-netpol selects payments/gateway[Deployment], but frontend/asset-cache[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/asset-cache[Deployment] => payments/mastercard-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but frontend/asset-cache[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but frontend/asset-cache[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/asset-cache[Deployment] => payments/visa-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], but payments/visa-processor[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but payments/visa-processor[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but frontend/asset-cache[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but frontend/asset-cache[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/webapp[Deployment] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/webapp[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)
				- NetworkPolicy frontend/webapp-netpol selects frontend/webapp[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule

		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/webapp[Deployment] => backend/catalog[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy frontend/webapp-netpol allows connection by Egress rule #5
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], but frontend/webapp[Deployment] is not selected by any Ingress rule
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but frontend/webapp[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/webapp[Deployment] => backend/checkout[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy frontend/webapp-netpol allows connection by Egress rule #5
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/checkout-netpol selects backend/checkout[Deployment], and Ingress rule #1 selects frontend/webapp[Deployment], but the protocols and ports do not match
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/checkout[Deployment], but frontend/webapp[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/webapp[Deployment] => backend/notification[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy frontend/webapp-netpol allows connection by Egress rule #5
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but frontend/webapp[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but frontend/webapp[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/webapp[Deployment] => backend/recommendation[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy frontend/webapp-netpol allows connection by Egress rule #5
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/recommendation[Deployment], but frontend/webapp[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/recommendation-netpol selects backend/recommendation[Deployment], and Ingress rule #3 selects frontend/webapp[Deployment], but the protocols and ports do not match


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/webapp[Deployment] => backend/reports[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy frontend/webapp-netpol allows connection by Egress rule #5
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/reports[Deployment], but frontend/webapp[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/reports-netpol selects backend/reports[Deployment], and Ingress rule #1 selects frontend/webapp[Deployment], but the protocols and ports do not match


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/webapp[Deployment] => backend/shipping[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy frontend/webapp-netpol allows connection by Egress rule #5
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but frontend/webapp[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], and Ingress rule #1 selects frontend/webapp[Deployment], but the protocols and ports do not match


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/webapp[Deployment] => frontend/asset-cache[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy frontend/webapp-netpol allows connection by Egress rule #5
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], and Ingress rule #1 selects frontend/webapp[Deployment], but the protocols and ports do not match
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but frontend/webapp[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/webapp[Deployment] => payments/gateway[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy frontend/webapp-netpol allows connection by Egress rule #5
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/gateway[Deployment], but frontend/webapp[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/gateway-netpol selects payments/gateway[Deployment], but frontend/webapp[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/webapp[Deployment] => payments/mastercard-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy frontend/webapp-netpol allows connection by Egress rule #5
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but frontend/webapp[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but frontend/webapp[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between frontend/webapp[Deployment] => payments/visa-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy frontend/webapp-netpol allows connection by Egress rule #5
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but frontend/webapp[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but frontend/webapp[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/gateway[Deployment] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/gateway[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/gateway-netpol selects payments/gateway[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule

		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/gateway[Deployment] => backend/catalog[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy payments/gateway-netpol allows connection by Egress rule #3
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], but payments/gateway[Deployment] is not selected by any Ingress rule
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but payments/gateway[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/gateway[Deployment] => backend/checkout[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy payments/gateway-netpol allows connection by Egress rule #3
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/checkout-netpol selects backend/checkout[Deployment], but payments/gateway[Deployment] is not selected by any Ingress rule
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/checkout[Deployment], but payments/gateway[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/gateway[Deployment] => backend/notification[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy payments/gateway-netpol allows connection by Egress rule #3
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but payments/gateway[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but payments/gateway[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/gateway[Deployment] => backend/recommendation[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy payments/gateway-netpol allows connection by Egress rule #3
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/recommendation[Deployment], but payments/gateway[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/recommendation-netpol selects backend/recommendation[Deployment], but payments/gateway[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/gateway[Deployment] => backend/reports[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy payments/gateway-netpol allows connection by Egress rule #3
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/reports[Deployment], but payments/gateway[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/reports-netpol selects backend/reports[Deployment], but payments/gateway[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/gateway[Deployment] => backend/shipping[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy payments/gateway-netpol allows connection by Egress rule #3
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but payments/gateway[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but payments/gateway[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/gateway[Deployment] => frontend/asset-cache[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy payments/gateway-netpol allows connection by Egress rule #3
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], and Ingress rule #1 selects payments/gateway[Deployment], but the protocols and ports do not match
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but payments/gateway[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/gateway[Deployment] => frontend/webapp[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy payments/gateway-netpol allows connection by Egress rule #3
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/webapp[Deployment], but payments/gateway[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy frontend/webapp-netpol selects frontend/webapp[Deployment], and Ingress rule #1 selects payments/gateway[Deployment], but the protocols and ports do not match


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/gateway[Deployment] => payments/mastercard-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy payments/gateway-netpol allows connection by Egress rule #3
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but payments/gateway[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], and Ingress rule #1 selects payments/gateway[Deployment], but the protocols and ports do not match


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/gateway[Deployment] => payments/visa-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy payments/gateway-netpol allows connection by Egress rule #3
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but payments/gateway[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], and Ingress rule #1 selects payments/gateway[Deployment], but the protocols and ports do not match


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/mastercard-processor[Deployment] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)

		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/mastercard-processor[Deployment] => backend/catalog[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but backend/catalog[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but backend/catalog[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Ingress rule
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/mastercard-processor[Deployment] => backend/checkout[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but backend/checkout[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but backend/checkout[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/checkout-netpol selects backend/checkout[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Ingress rule
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/checkout[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/mastercard-processor[Deployment] => backend/notification[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but backend/notification[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but backend/notification[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/mastercard-processor[Deployment] => backend/recommendation[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but backend/recommendation[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but backend/recommendation[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/recommendation[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/recommendation-netpol selects backend/recommendation[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/mastercard-processor[Deployment] => backend/reports[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but backend/reports[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but backend/reports[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/reports[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/reports-netpol selects backend/reports[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/mastercard-processor[Deployment] => backend/shipping[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but backend/shipping[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but backend/shipping[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/mastercard-processor[Deployment] => frontend/asset-cache[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but frontend/asset-cache[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but frontend/asset-cache[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], and Ingress rule #1 selects payments/mastercard-processor[Deployment], but the protocols and ports do not match
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/mastercard-processor[Deployment] => frontend/webapp[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but frontend/webapp[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but frontend/webapp[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/webapp[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy frontend/webapp-netpol selects frontend/webapp[Deployment], and Ingress rule #1 selects payments/mastercard-processor[Deployment], but the protocols and ports do not match


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/mastercard-processor[Deployment] => payments/gateway[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but payments/gateway[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but payments/gateway[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/gateway[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/gateway-netpol selects payments/gateway[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/mastercard-processor[Deployment] => payments/visa-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but payments/visa-processor[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but payments/visa-processor[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/visa-processor[Deployment] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)

		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/visa-processor[Deployment] => backend/catalog[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but backend/catalog[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but backend/catalog[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/catalog-netpol selects backend/catalog[Deployment], but payments/visa-processor[Deployment] is not selected by any Ingress rule
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/catalog[Deployment], but payments/visa-processor[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/visa-processor[Deployment] => backend/checkout[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but backend/checkout[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but backend/checkout[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/checkout-netpol selects backend/checkout[Deployment], but payments/visa-processor[Deployment] is not selected by any Ingress rule
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/checkout[Deployment], but payments/visa-processor[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/visa-processor[Deployment] => backend/notification[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but backend/notification[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but backend/notification[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/notification[Deployment], but payments/visa-processor[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/notification-netpol selects backend/notification[Deployment], but payments/visa-processor[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/visa-processor[Deployment] => backend/recommendation[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but backend/recommendation[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but backend/recommendation[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/recommendation[Deployment], but payments/visa-processor[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/recommendation-netpol selects backend/recommendation[Deployment], but payments/visa-processor[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/visa-processor[Deployment] => backend/reports[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but backend/reports[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but backend/reports[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/reports[Deployment], but payments/visa-processor[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/reports-netpol selects backend/reports[Deployment], but payments/visa-processor[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/visa-processor[Deployment] => backend/shipping[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but backend/shipping[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but backend/shipping[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy backend/default-deny-in-namespace-backend selects backend/shipping[Deployment], but payments/visa-processor[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy backend/shipping-netpol selects backend/shipping[Deployment], but payments/visa-processor[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/visa-processor[Deployment] => frontend/asset-cache[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but frontend/asset-cache[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but frontend/asset-cache[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], and Ingress rule #1 selects payments/visa-processor[Deployment], but the protocols and ports do not match
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but payments/visa-processor[Deployment] is not selected by any Ingress rule (no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/visa-processor[Deployment] => frontend/webapp[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but frontend/webapp[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but frontend/webapp[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/webapp[Deployment], but payments/visa-processor[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy frontend/webapp-netpol selects frontend/webapp[Deployment], and Ingress rule #1 selects payments/visa-processor[Deployment], but the protocols and ports do not match


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/visa-processor[Deployment] => payments/gateway[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but payments/gateway[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but payments/gateway[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/gateway[Deployment], but payments/visa-processor[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/gateway-netpol selects payments/gateway[Deployment], but payments/visa-processor[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between payments/visa-processor[Deployment] => payments/mastercard-processor[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/visa-processor[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Egress rule (no rules defined)
				- NetworkPolicy payments/visa-processor-netpol selects payments/visa-processor[Deployment], but payments/mastercard-processor[Deployment] is not selected by any Egress rule (no rules defined)

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy payments/default-deny-in-namespace-payments selects payments/mastercard-processor[Deployment], but payments/visa-processor[Deployment] is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy payments/mastercard-processor-netpol selects payments/mastercard-processor[Deployment], but payments/visa-processor[Deployment] is not selected by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between {ingress-controller} => frontend/asset-cache[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/asset-cache-netpol selects frontend/asset-cache[Deployment], and Ingress rule #1 selects {ingress-controller}, but the protocols and ports do not match
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/asset-cache[Deployment], but {ingress-controller} is not selected by any Ingress rule (no rules defined)

			Route frontend/asset-cache allows ingress to service asset-cache-service, but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between {ingress-controller} => frontend/webapp[Deployment]:

Denied connections:
	Denied UDP:[5353] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy frontend/default-deny-in-namespace-frontend selects frontend/webapp[Deployment], but {ingress-controller} is not selected by any Ingress rule (no rules defined)
				- NetworkPolicy frontend/webapp-netpol selects frontend/webapp[Deployment], and Ingress rule #1 selects {ingress-controller}, but the protocols and ports do not match

			Route frontend/webapp allows ingress to service webapp-service, but the protocols and ports do not match
